<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mati.nurplaner.Sac"
    android:background="@android:color/holo_blue_dark">

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:weightSum="1"-->
        <!--android:layout_alignParentTop="true">-->


  g  <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:text="@string/sacstr"
        android:id="@+id/sacTextView"
        android:autoText="false"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center|left"
        android:layout_columnSpan="2"
        android:elegantTextHeight="true"
        android:textColorHighlight="#f53737"
        android:textSize="23dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obl_bt"
        android:id="@+id/caclSacBt"
        android:layout_row="0"
        android:layout_column="3" />






    <Spinner
        android:layout_width="75dip"
        android:layout_height="wrap_content"

        android:id="@+id/cilinderList"
        android:layout_row="1"
        android:layout_column="0"

        />

    <TextView

        android:text="@string/butla"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:layout_row="1"
        android:layout_column="1"/>





    <EditText
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/startP_TexEdit"
        android:layout_row="2"
        android:layout_column="0"
        android:text="200"/>

    <TextView

        android:text="@string/pstart"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_column="1"/>

    <EditText
        android:layout_width="45dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/endP_TexEdit"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView

        android:text="@string/pend"
        android:id="@+id/textView4"

        android:layout_gravity="center"
        android:layout_row="3"
        android:layout_column="1"/>

    <EditText
        android:layout_width="45dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/avgD_TexEdit"
        android:layout_row="4"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgD"
        android:id="@+id/textView5"

        android:layout_gravity="center"
        android:layout_row="4"
        android:layout_column="1"/>

    <EditText
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/timeD_TexEdit"


        android:layout_row="5"
        android:layout_column="0"/>

    <TextView

        android:text="@string/dTime"
        android:id="@+id/textView6"


        android:layout_row="5"
        android:layout_column="1"/>

    </GridLayout>
</RelativeLayout>
